@@ -1,14 +1,15 @@
 MAX=$1
-DOC_ROOT=/Users/oubiwann/Sites/
+#DOC_ROOT=/Users/oubiwann/Sites/
+DOC_ROOT=/home/oubiwann/public_html
 FILE_PREFIX=twistd
-PORT_PREFIX=700
+STARTING_PORT=7001
 cd /tmp
-for ((NUM = 1; NUM <= $MAX; NUM++))
+for ((NUM=$STARTING_PORT; NUM <= $MAX; NUM++))
     do
     rm ${FILE_PREFIX}${NUM}.pid
     rm ${FILE_PREFIX}${NUM}.log
     twistd --pidfile=${FILE_PREFIX}${NUM}.pid web \
-        --port=${PORT_PREFIX}${NUM} \
+        --port=${NUM} \
         --path=$DOC_ROOT \
         --logfile=${FILE_PREFIX}${NUM}.log
     done
